0.3 (?? 2016)
  * 

0.2 (7 September 2016)

  * First version on CRAN

0.1 (22 August 2016)

  * First version on github