@@ -1,5 +1,6 @@
 0.3 (?? 2016)
-  * 
+  * Improved handling of forecastfunction argument in thief()
+  * Bug fixes
 
 0.2 (7 September 2016)
 
